--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body {
   height: 70vh;
 }
 
+*/
 .row {
   background-color: var(--main-color2);
   display: flex;
@@ -50,10 +51,16 @@ body {
   height: 100%;
 }
 
-.button {
-  background-position: center;
-  background-image: url("Images/cardBack.webp");
-  background-size: cover;
+.scene {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  perspective: 600px;
+}
+
+.card {
   color: var(--main-color2);
   display: flex;
   justify-content: center;
@@ -62,19 +69,38 @@ body {
   border-radius: 5px;
   width: 100%;
   height: 100%;
-  transition: 0.3s;
+  position: relative;
+  cursor: pointer;
+  transform-style: preserve-3d;
+  transform-origin: center right;
+  transition: transform 1s;
 }
 
-.button-inner {
-  position: relative;
+.card.is-flipped {
+  transform: translateX(-100%) rotateY(-180deg);
+}
+
+.card_face {
+  position: absolute;
   width: 100%;
   height: 100%;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
+  backface-visibility: hidden;
 }
 
-.button:hover {
+.card_front {
+  background-position: center;
+  background-image: url("Images/cardBack.webp");
+  background-size: cover;
+}
+
+.card_back {
+  background-position: center;
+  background-image: url("Images/cardBack.webp");
+  background-size: cover;
+  transform: rotateY(180deg);
+}
+
+.card:hover {
   background-color: var(--main-color3);
   color: var(--main-color2);
 }
