--- a/game.css
+++ b/game.css
@@ -42,8 +42,9 @@ body.light-mode {
   flex-direction: column;
   justify-content: center;
   width: 55vw;
-  height: 70vh;
+  height: 75vh;
   row-gap: 35px;
+  cursor: pointer;
 }
 
 body.light-mode #game {
@@ -87,6 +88,7 @@ body.light-mode .row {
   transform-style: preserve-3d;
   transform-origin: center right;
   transition: transform 1s;
+  cursor: pointer;
 }
 
 .card.is-flipped {
@@ -127,7 +129,7 @@ body.light-mode .row {
   color: var(--main-color2);
   box-shadow: 0 0 15px var(--box-shadow-color);
   font-size: 30px;
-  margin-top: 50px;
+  margin-top: 30px;
   border: none;
   border-radius: 10px;
   display: flex;
@@ -136,6 +138,7 @@ body.light-mode .row {
   padding: 30px 40px;
   width: 100%;
   transition: 0.3s;
+  cursor: pointer;
 }
 
 #restartBtn:hover {
@@ -158,6 +161,8 @@ body.light-mode #restartBtn:hover {
   background-color: var(--main-color);
   display: flex;
   align-self: end;
+  cursor: pointer;
+  transform: scale(1.25);
 }
 
 body.light-mode #darkLight {
