--- a/hard.css
+++ b/hard.css
@@ -178,9 +178,20 @@ body.light-mode #restartBtn:hover {
   background-color: var(--main-color2);
   color: var(--main-color3);
 }
+a{
+  text-decoration: none;
+}
+
+a:hover{
+  text-decoration: none;
+}
 
 #points{
   color: var(--main-color2);
+}
+
+body.light-mode #points{
+  color: var(--box-shadow-color);
 }
 
 #lottie-animation {
